# defmac

./: .travis.yml  Cargo.toml  README.rst
src/: lib.rs
tests/: cross_crate.rs
