[package]
name = "defmac"
version = "0.2.0"
authors = ["bluss"]
license = "Apache-2.0/MIT"

description = "A macro to define lambda-like macros inline."

documentation = "https://docs.rs/defmac/"
repository = "https://github.com/bluss/defmac"
categories = ["rust-patterns"]

[dependencies]

[package.metadata.release]
no-dev-version = true
